Implemented put move. Still needs a lot of corner cases, updated Documentation
